@@ -401,6 +401,8 @@ Angel Carpintero
    * Fix Problem Encoding 1280x1024 resolution videos
      http://www.lavrsen.dk/twiki/bin/view/Motion/SupportQuestion2008x06x11x183727
    * Add write/read nonblock functions in webhttpd( timeout on read/write).
+   * Add a new parameter netcam_broken, to be less strict with some buggy network cameras firmwares.
+     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2008x06x19x123218
  
 Jared D
    * Change bayer2rgb24() to fix a problem with sn9c102 driver
