@@ -109,6 +109,7 @@ struct config {
 	const char *netcam_userpass;
 	const char *netcam_keepalive;
 	const char *netcam_proxy;
+	unsigned int netcam_broken;
 	int text_changes;
 	const char *text_left;
 	const char *text_right;
